--- a/ShareClipbrd/ShareClipbrdApp.Win/App.xaml
+++ b/ShareClipbrd/ShareClipbrdApp.Win/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="ShareClipbrdApp.Win.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ShareClipbrdApp.Win"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:ShareClipbrdApp.Win"       
+             Startup="OnStartup"
+             ShutdownMode="OnMainWindowClose">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
