--- a/ShareClipbrd/ShareClipbrdApp.Win/App.xaml
+++ b/ShareClipbrd/ShareClipbrdApp.Win/App.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ShareClipbrdApp.Win"       
              Startup="OnStartup"
-             ShutdownMode="OnMainWindowClose">
+             ShutdownMode="OnMainWindowClose"
+             DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <Application.Resources>
 
     </Application.Resources>
