--- a/ShareClipbrd/ShareClipbrdApp.Win/MainWindow.xaml
+++ b/ShareClipbrd/ShareClipbrdApp.Win/MainWindow.xaml
@@ -25,10 +25,10 @@
             <Separator />
             <MenuItem Header="Settings" >
                 <MenuItem Header="Host address">
-                    <TextBox x:Name="edHostAddress" Text="TextBox" Width="200" Margin="0,0,-40,0" TextChanged="edHostAddress_TextChanged"/>
+                    <TextBox x:Name="edHostAddress" Width="200" Margin="0,0,-40,0" TextChanged="edHostAddress_TextChanged"/>
                 </MenuItem>
                 <MenuItem Header="Partner address" >
-                    <TextBox x:Name="edPartnerAddress" Text="TextBox" Width="200" Margin="0,0,-40,0" TextChanged="edPartnerAddress_TextChanged"/>
+                    <TextBox x:Name="edPartnerAddress" Width="200" Margin="0,0,-40,0" TextChanged="edPartnerAddress_TextChanged"/>
                 </MenuItem>
             </MenuItem>
             <Separator />
