add settings and restore window position

--- a/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
+++ b/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
@@ -20,7 +20,7 @@
         
         
         Initialized="OnInitialized"
-        Closed="OnClosed"
+        Closing="OnClosing"
         Activated="OnActivated"
         Deactivated="OnDeactivated"
         
