--- a/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
+++ b/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
@@ -35,10 +35,10 @@
       <Separator />
       <MenuItem Header="Settings" >
         <MenuItem Header="Host address">
-          <TextBox x:Name="edHostAddress" Width="250" Margin="0,0,-10,0" TextInput="edHostAddress_TextChanged" />
+          <TextBox x:Name="edHostAddress" Width="250" Margin="0,0,-10,0" PropertyChanged="edHostAddress_PropertyChanged" />
         </MenuItem>
         <MenuItem Header="Partner address" >
-          <TextBox x:Name="edPartnerAddress" Width="250" Margin="0,0,-10,0" TextInput="edPartnerAddress_TextChanged"/>
+          <TextBox x:Name="edPartnerAddress" Width="250" Margin="0,0,-10,0" PropertyChanged="edPartnerAddress_PropertyChanged"/>
         </MenuItem>
       </MenuItem>
       <Separator />
