wip. handle clipboard text formats

--- a/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
+++ b/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
@@ -25,6 +25,7 @@
         PointerPressed="OnPointerPressedEvent"
         PointerReleased="OnPointerReleasedEvent"
         PointerMoved="OnPointerMoved"
+        KeyDown="OnKeyDown"
         >
 
   <Window.ContextMenu>
