--- a/ShareClipbrd/ShareClipbrdApp/App.axaml
+++ b/ShareClipbrd/ShareClipbrdApp/App.axaml
@@ -1,7 +1,10 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="ShareClipbrdApp.App">
-    <Application.Styles>
-        <FluentTheme Mode="Light"/>
-    </Application.Styles>
+             x:Class="ShareClipbrdApp.App"
+             RequestedThemeVariant="Default">
+  <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+
+  <Application.Styles>
+    <FluentTheme />
+  </Application.Styles>
 </Application>
