--- a/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
+++ b/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
@@ -56,6 +56,10 @@
   <Border x:Name="Border" BorderThickness="2" BorderBrush="DarkGoldenrod" CornerRadius="3" Background="PowderBlue">
     <Canvas Margin="1" >
       <Image Stretch="Uniform" Source ="{Binding ProgressBarBitmap}" x:Name="SuperImage"/>
+      <Canvas x:Name="crOnline" >
+        <Ellipse Fill="DarkGreen" Width="7" Height="7" Canvas.Left="1" Canvas.Top="1"/>
+        <Ellipse Fill="Lime" Width="5" Height="5" Canvas.Left="2" Canvas.Top="2"/>
+      </Canvas>
     </Canvas>
   </Border>
 
