--- a/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
+++ b/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
@@ -60,6 +60,10 @@
         <Ellipse Fill="DarkGreen" Width="7" Height="7" Canvas.Left="1" Canvas.Top="1"/>
         <Ellipse Fill="Lime" Width="5" Height="5" Canvas.Left="2" Canvas.Top="2"/>
       </Canvas>
+      <Canvas x:Name="crClientOnline" >
+        <Ellipse Fill="DarkGreen" Width="7" Height="7" Canvas.Left="9" Canvas.Top="1"/>
+        <Ellipse Fill="Lime" Width="5" Height="5" Canvas.Left="10" Canvas.Top="2"/>
+      </Canvas>
     </Canvas>
   </Border>
 
