--- a/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
+++ b/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
@@ -57,12 +57,10 @@
     <Canvas Margin="1" >
       <Image Stretch="Uniform" Source ="{Binding ProgressBarBitmap}" x:Name="SuperImage"/>
       <Canvas x:Name="crOnline" >
-        <Ellipse Fill="DarkGreen" Width="7" Height="7" Canvas.Left="1" Canvas.Top="1"/>
-        <Ellipse Fill="Lime" Width="5" Height="5" Canvas.Left="2" Canvas.Top="2"/>
+        <Ellipse Fill="DarkTurquoise" Width="5" Height="5" Canvas.Left="2" Canvas.Top="2"/>
       </Canvas>
       <Canvas x:Name="crClientOnline" >
-        <Ellipse Fill="DarkGreen" Width="7" Height="7" Canvas.Left="7" Canvas.Top="1"/>
-        <Ellipse Fill="Lime" Width="5" Height="5" Canvas.Left="8" Canvas.Top="2"/>
+        <Ellipse Fill="DarkTurquoise" Width="5" Height="5" Canvas.Left="7" Canvas.Top="2"/>
       </Canvas>
     </Canvas>
   </Border>
