hide from taskbar

--- a/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
+++ b/ShareClipbrd/ShareClipbrdApp/MainWindow.axaml
@@ -28,6 +28,7 @@
         PointerReleased="OnPointerReleasedEvent"
         PointerMoved="OnPointerMoved"
         KeyDown="OnKeyDown"
+        ShowInTaskbar="False"
         >
 
   <Window.ContextMenu>
